# iora

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
antlr4/: Iora.g4  IoraLexer.g4  IoraParser.g4
antlr4/grammar_test/declaration/: classDecl.io  funcDecl.io  varDecl.io
antlr4/grammar_test/expression/: assignment.io  call.io  comment.io  comparison.io  logic.io  primary.io  term_factor_unary.io
antlr4/grammar_test/statement/: statement.io
src/: Antlr4BaseLexer.h  Lexer.h  Parser.h  antlr4.h  iora-antlr4.h  main.cpp
test/: CMakeLists.txt  LexerTest.cpp  ParserTest.cpp
